unifi/deployment/unifi-controller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-controller
  labels:
    app: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      containers:
        - name: unifi
          image: jacobalberty/unifi:v9.0.114
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8443
              name: https
            - containerPort: 3478
              name: stun
              protocol: UDP
            - containerPort: 10001
              name: discovery
              protocol: UDP
            - containerPort: 6789
              name: speedtest
            - containerPort: 1900
              name: ssdp
              protocol: UDP
          volumeMounts:
            - name: unifi-data
              mountPath: /unifi
      volumes:
        - name: unifi-data
          persistentVolumeClaim:
            claimName: unifi-data
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.7
  selector:
    app: unifi
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443
    - name: stun
      port: 3478
      targetPort: 3478
      protocol: UDP
    - name: discovery
      port: 10001
      targetPort: 10001
      protocol: UDP
    - name: speedtest
      port: 6789
      targetPort: 6789
    - name: ssdp
      port: 1900
      targetPort: 1900
      protocol: UDP
