unifi/deployment/unifi-ingress.yml
# NEEDS ADDITIONAL WORK
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-controller
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - unifi-controller.home
    secretName: unifi-tls
  rules:
  - host: unifi-controller.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi
            port:
              number: 8443
